--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex App</title>
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-   
+   <div class="container">
+   </div>
     <script src="JS/index.js"></script>
 </body>
 </html>
