remove array items

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="container">
         <ul class="pokemon-list"></ul>
     </div>
+        <script src="JS/promise-polyfill.js"></script>
+        <script src="JS/fetch-polyfill.js"></script>
         <script src="JS/index.js"></script>
     </body>
 </html>
