--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
+        <h1>Pokemon List</h1>
     <div class="container">
         <ul class="pokemon-list"></ul>
     </div>
