--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
         <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
-        <h1>Pokemon List</h1>
-    <div class="container">
-        <ul class="pokemon-list"></ul>
-    </div>
+    <button id="show-modal">Show Modal</button>
+    <div id="modal-container"></div> 
         <script src="JS/promise-polyfill.js"></script>
         <script src="JS/fetch-polyfill.js"></script>
         <script src="JS/index.js"></script>
