--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
     <button id="show-modal">Show Modal</button>
+    <button id="show-dialog">Show Dialog</button>
     <div id="modal-container"></div> 
         <script src="JS/promise-polyfill.js"></script>
         <script src="JS/fetch-polyfill.js"></script>
